--- a/ios/Podfile
+++ b/ios/Podfile
@@ -42,6 +42,7 @@ target 'Baka' do
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
+  pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
 
   target 'BakaTests' do
     inherit! :complete
